--- a/.forestry/front_matter/templates/test1.yml
+++ b/.forestry/front_matter/templates/test1.yml
@@ -34,7 +34,7 @@ fields:
   default: ''
   config:
     required: false
-    options: []
+    options: ["登山","其他"]
     source:
       type: simple
       section: ''
